$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-23 (opened January 8, 2013)

	* capscale: It was wrongly assumed that eigenvalues could be used
	in normalization of species scores, but this worked only with
	Euclidean distances. Now normalization is done explicitly with
	decostand() function. This change means that scaling of species
	scores will change, and graphs can look different than
	previously. All analyses should be redone. Function now displays
	the value of the additive constant with 'add = TRUE'.

	* stressplot: added stressplot() methods for wcmdscale(),
	capscale(), cca(), rda(), prcomp() and princomp() results.  These
	also work with constrained ordination, but not with the partial
	ordination (at least not yet).  These methods display the
	ordination distances in given number of dimensions (defaults 'k =
	2') against original observed distances.  These original distances
	are found from the full space solution, and in capscale() and
	wcmdscale() they are correct for the imaginary axes. The weights
	are used in wcmdscale() and cca() so that their distances differ
	from plotted ordinations, but agree with eigenvalues. Partial
	models (p-dbRDA, pRDA, pCCA) add the partial component both to the
	original dissimilarities and the fit.

	* wcmdscale: added method functions print(), plot() and
	scores(). Now class "wcmdscale" results also retun the function
	call and dimensions have names.
	
Version 2.1-22 (closed January 8, 2013)

	* multipart: argument global was printed as TRUE regardless of the
	actual argument value. This did not affect calculations. Reported
	by Valerie Coudrain.

	* monoMDS, metaMDS: Default convergence criteria were changed in
	monoMDS. Most importantly, now scale factor of the gradient is
	sfgrmin = 1e-7. The former limit 1e-5 was much too slack with
	large data sets and iterations stopped too early without getting
	close to the solution. In addition, scores() ignore now requests